PromelaParser.java
// Generated from Promela.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PromelaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, LPAR=33, RPAR=34, LBRAKET=35, RBRAKET=36, RARROW=37, SEMICOL=38, 
		PROCTYPE=39, NEVER=40, TRACE=41, TYPEDEF=42, MTYPE=43, BIT=44, BOOL=45, 
		BYTE=46, SHORT=47, INT=48, CHAN=49, ACTIVE=50, PRIORITY=51, PROVIDED=52, 
		HIDDEN_=53, SHOW=54, UNLESS=55, XR=56, XS=57, OF=58, EVAL=59, IF=60, FI=61, 
		DO=62, OD=63, FOR=64, ATOMIC=65, D_STEP=66, SELECT=67, ELSE=68, BREAK=69, 
		GOTO=70, PRINT=71, IN=72, ASSERT=73, LEN=74, TIMEOUT=75, NP_=76, ENABLED=77, 
		PC_VALUE=78, RUN=79, GET_PRIORITY=80, SET_PRIORITY=81, INIT=82, INLINE=83, 
		LTL=84, TRUE=85, FALSE=86, SKIP_=87, FULL=88, EMPTY=89, NFULL=90, NEMPTY=91, 
		HOLE=92, FEATURES=93, DCOLON=94, NameLiteral=95, StringLiteral=96, NumberLiteral=97, 
		WS=98, COMMENT=99, LINE_COMMENT=100;
	public static final int
		RULE_spec = 0, RULE_module = 1, RULE_proctype = 2, RULE_inline = 3, RULE_ltl = 4, 
		RULE_init = 5, RULE_never = 6, RULE_trace = 7, RULE_utype = 8, RULE_mtype = 9, 
		RULE_ftype = 10, RULE_decl_lst = 11, RULE_one_decl = 12, RULE_typename = 13, 
		RULE_active = 14, RULE_priority = 15, RULE_enabler = 16, RULE_visible = 17, 
		RULE_sequence = 18, RULE_step = 19, RULE_ivar = 20, RULE_ch_init = 21, 
		RULE_varref = 22, RULE_send = 23, RULE_receive = 24, RULE_poll = 25, RULE_send_args = 26, 
		RULE_arg_lst = 27, RULE_recv_args = 28, RULE_recv_arg = 29, RULE_assign = 30, 
		RULE_stmnt = 31, RULE_range = 32, RULE_stmnt_options = 33, RULE_andor = 34, 
		RULE_binarop = 35, RULE_unarop = 36, RULE_any_expr = 37, RULE_expr = 38, 
		RULE_chanpoll = 39, RULE_uname = 40, RULE_name = 41, RULE_constant = 42, 
		RULE_string = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"spec", "module", "proctype", "inline", "ltl", "init", "never", "trace", 
			"utype", "mtype", "ftype", "decl_lst", "one_decl", "typename", "active", 
			"priority", "enabler", "visible", "sequence", "step", "ivar", "ch_init", 
			"varref", "send", "receive", "poll", "send_args", "arg_lst", "recv_args", 
			"recv_arg", "assign", "stmnt", "range", "stmnt_options", "andor", "binarop", 
			"unarop", "any_expr", "expr", "chanpoll", "uname", "name", "constant", 
			"string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'='", "','", "'.'", "'!'", "'!!'", "'?'", "'??'", 
			"'<'", "'>'", "'-'", "'++'", "'--'", "':'", "'..'", "'&&'", "'||'", "'+'", 
			"'*'", "'/'", "'%'", "'&'", "'^'", "'|'", "'<='", "'=='", "'!='", "'<<'", 
			"'>>'", "'~'", "'@'", "'('", "')'", "'{'", "'}'", "'->'", "';'", "'proctype'", 
			"'never'", "'trace'", "'typedef'", "'mtype'", "'bit'", "'bool'", "'byte'", 
			"'short'", "'int'", "'chan'", "'active'", "'priority'", "'provided'", 
			"'hidden'", "'show'", "'unless'", "'xr'", "'xs'", "'of'", "'eval'", "'if'", 
			"'fi'", "'do'", "'od'", "'for'", "'atomic'", "'d_step'", "'select'", 
			"'else'", "'break'", "'goto'", "'print'", "'in'", "'assert'", "'len'", 
			"'timeout'", "'np_'", "'enabled'", "'pc_value'", "'run'", "'get_priority'", 
			"'set_priority'", "'init'", "'inline'", "'ltl'", "'true'", "'false'", 
			"'skip'", "'full'", "'empty'", "'nfull'", "'nempty'", "'???'", "'features'", 
			"'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "LPAR", "RPAR", 
			"LBRAKET", "RBRAKET", "RARROW", "SEMICOL", "PROCTYPE", "NEVER", "TRACE", 
			"TYPEDEF", "MTYPE", "BIT", "BOOL", "BYTE", "SHORT", "INT", "CHAN", "ACTIVE", 
			"PRIORITY", "PROVIDED", "HIDDEN_", "SHOW", "UNLESS", "XR", "XS", "OF", 
			"EVAL", "IF", "FI", "DO", "OD", "FOR", "ATOMIC", "D_STEP", "SELECT", 
			"ELSE", "BREAK", "GOTO", "PRINT", "IN", "ASSERT", "LEN", "TIMEOUT", "NP_", 
			"ENABLED", "PC_VALUE", "RUN", "GET_PRIORITY", "SET_PRIORITY", "INIT", 
			"INLINE", "LTL", "TRUE", "FALSE", "SKIP_", "FULL", "EMPTY", "NFULL", 
			"NEMPTY", "HOLE", "FEATURES", "DCOLON", "NameLiteral", "StringLiteral", 
			"NumberLiteral", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Promela.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PromelaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecContext extends ParserRuleContext {
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(88);
				module();
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 39)) & ~0x3f) == 0 && ((1L << (_la - 39)) & ((1L << (PROCTYPE - 39)) | (1L << (NEVER - 39)) | (1L << (TRACE - 39)) | (1L << (TYPEDEF - 39)) | (1L << (MTYPE - 39)) | (1L << (BIT - 39)) | (1L << (BOOL - 39)) | (1L << (BYTE - 39)) | (1L << (SHORT - 39)) | (1L << (INT - 39)) | (1L << (CHAN - 39)) | (1L << (ACTIVE - 39)) | (1L << (HIDDEN_ - 39)) | (1L << (SHOW - 39)) | (1L << (INIT - 39)) | (1L << (INLINE - 39)) | (1L << (LTL - 39)) | (1L << (FEATURES - 39)) | (1L << (NameLiteral - 39)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public ProctypeContext proctype() {
			return getRuleContext(ProctypeContext.class,0);
		}
		public InlineContext inline() {
			return getRuleContext(InlineContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public NeverContext never() {
			return getRuleContext(NeverContext.class,0);
		}
		public TraceContext trace() {
			return getRuleContext(TraceContext.class,0);
		}
		public UtypeContext utype() {
			return getRuleContext(UtypeContext.class,0);
		}
		public MtypeContext mtype() {
			return getRuleContext(MtypeContext.class,0);
		}
		public FtypeContext ftype() {
			return getRuleContext(FtypeContext.class,0);
		}
		public Decl_lstContext decl_lst() {
			return getRuleContext(Decl_lstContext.class,0);
		}
		public LtlContext ltl() {
			return getRuleContext(LtlContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				proctype();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				inline();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				init();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				never();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				trace();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				utype();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				mtype();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				ftype();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				decl_lst();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(102);
				ltl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProctypeContext extends ParserRuleContext {
		public TerminalNode PROCTYPE() { return getToken(PromelaParser.PROCTYPE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(PromelaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(PromelaParser.RPAR, 0); }
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public ActiveContext active() {
			return getRuleContext(ActiveContext.class,0);
		}
		public Decl_lstContext decl_lst() {
			return getRuleContext(Decl_lstContext.class,0);
		}
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public EnablerContext enabler() {
			return getRuleContext(EnablerContext.class,0);
		}
		public ProctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proctype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterProctype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitProctype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitProctype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProctypeContext proctype() throws RecognitionException {
		ProctypeContext _localctx = new ProctypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_proctype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ACTIVE) {
				{
				setState(105);
				active();
				}
			}

			setState(108);
			match(PROCTYPE);
			setState(109);
			name();
			setState(110);
			match(LPAR);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 43)) & ~0x3f) == 0 && ((1L << (_la - 43)) & ((1L << (MTYPE - 43)) | (1L << (BIT - 43)) | (1L << (BOOL - 43)) | (1L << (BYTE - 43)) | (1L << (SHORT - 43)) | (1L << (INT - 43)) | (1L << (CHAN - 43)) | (1L << (HIDDEN_ - 43)) | (1L << (SHOW - 43)) | (1L << (NameLiteral - 43)))) != 0)) {
				{
				setState(111);
				decl_lst();
				}
			}

			setState(114);
			match(RPAR);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRIORITY) {
				{
				setState(115);
				priority();
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROVIDED) {
				{
				setState(118);
				enabler();
				}
			}

			setState(121);
			match(LBRAKET);
			setState(122);
			sequence();
			setState(123);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineContext extends ParserRuleContext {
		public TerminalNode INLINE() { return getToken(PromelaParser.INLINE, 0); }
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode LPAR() { return getToken(PromelaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(PromelaParser.RPAR, 0); }
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public InlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterInline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitInline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitInline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineContext inline() throws RecognitionException {
		InlineContext _localctx = new InlineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(INLINE);
			setState(126);
			name();
			setState(127);
			match(LPAR);
			setState(128);
			name();
			setState(129);
			match(RPAR);
			setState(130);
			match(LBRAKET);
			setState(131);
			sequence();
			setState(132);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LtlContext extends ParserRuleContext {
		public TerminalNode LTL() { return getToken(PromelaParser.LTL, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public LtlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ltl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterLtl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitLtl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitLtl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LtlContext ltl() throws RecognitionException {
		LtlContext _localctx = new LtlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ltl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(LTL);
			setState(135);
			name();
			setState(136);
			match(LBRAKET);
			setState(137);
			match(T__0);
			setState(138);
			match(T__1);
			setState(139);
			expr(0);
			setState(140);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public TerminalNode INIT() { return getToken(PromelaParser.INIT, 0); }
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(INIT);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRIORITY) {
				{
				setState(143);
				priority();
				}
			}

			setState(146);
			match(LBRAKET);
			setState(147);
			sequence();
			setState(148);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeverContext extends ParserRuleContext {
		public TerminalNode NEVER() { return getToken(PromelaParser.NEVER, 0); }
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public NeverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_never; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterNever(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitNever(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitNever(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NeverContext never() throws RecognitionException {
		NeverContext _localctx = new NeverContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_never);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(NEVER);
			setState(151);
			match(LBRAKET);
			setState(152);
			sequence();
			setState(153);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TraceContext extends ParserRuleContext {
		public TerminalNode TRACE() { return getToken(PromelaParser.TRACE, 0); }
		public TerminalNode LBRAKET() { return getToken(PromelaParser.LBRAKET, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public TerminalNode RBRAKET() { return getToken(PromelaParser.RBRAKET, 0); }
		public TraceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).enterTrace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PromelaListener ) ((PromelaListener)listener).exitTrace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PromelaVisitor ) return ((PromelaVisitor<? extends T>)visitor).visitTrace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TraceContext trace() throws RecognitionException {
		TraceContext _localctx = new TraceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(TRACE);
			setState(156);
			match(LBRAKET);
			setState(157);
			sequence();
			setState(158);
			match(RBRAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
